# Mobile_Robotics

./: .gitignore  FinalReport.tex  MidtermReport.tex
bsk16_hw2/: CMakeLists.txt  hw2.vcg
bsk16_hw2/src/: command_publisher.cpp  command_publisher.cpp.old  command_publisher.cpp.v1
bsk_hw1/: CMakeLists.txt  mainpage.dox  manifest.xml  plot_path_ps1_starter_code.m  pose.csv
bsk_hw1/backup/: encoders.csv
bsk_hw1/data/: encoders.csv
bsk_hw1/src/: encoder_listener.cpp  pose_listener.cpp  pose_listener_save.cpp
delta/: CMakeLists.txt  calibration.launch  delta.launch  delta_params.yaml  final.vcg  go.py  initialPose.yaml  mainpage.dox  manifest.xml  mappertest.launch  plannertest.launch  robust_calibration.launch
delta/src/: CSpaceFuncs.cpp  CSpaceFuncs.h  Filters.h  MathyStuff.cpp  MathyStuff.h  PlannerFuncs.cpp  PlannerFuncs.h  camera.cpp  camera_funcs.cpp  camera_funcs.h  command_publisher.cpp  command_publisher.h  cvFuncs.cpp  cvFuncs.h  desiredpathcrawler.cpp  fakepso.cpp  goalpublisher.cpp  lidar.cpp  lidarmapper.cpp  mapper.cpp  orangelines.cpp  planner.cpp  plannerFuncs.cpp  plannerFuncs.h  profiler.cpp  pso.cpp  steering.cpp  testplanner.cpp  wesOrangeLines.cpp
delta/src/future/: camera.cpp  mapper.cpp  planner.cpp
delta/src/vision/: calib_camera.cpp  cvFuncs.cpp  cvFuncs.h  cvaux.cpp  cvblob.cpp  cvcolor.cpp  cvcontour.cpp  cvlabel.cpp  cvtrack.cpp  lib_demo.cpp  robust_calibration.cpp
eecs376_msgs/: mainpage.dox  manifest.xml
eecs376_msgs/msg/: GotThere.msg  PathList.msg  PathSegment.msg
eecs376_msgs/src/eecs376_msgs/msg/: _CrawlerDesiredState.py  _PathList.py  _PathSegment.py  __init__.py
eecs376_sandbox/: stack.xml
eecs376_sandbox/eecs376_vision_demo1/: CMakeLists.txt  mainpage.dox  manifest.xml  start_vision_demo.launch
eecs376_sandbox/eecs376_vision_demo1/include/eecs376_vision_demo1/: lib_demo.h
eecs376_sandbox/eecs376_vision_demo1/src/: cvaux.cpp  cvblob.cpp  cvcolor.cpp  cvcontour.cpp  cvlabel.cpp  cvtrack.cpp  demo_node.cpp  lib_demo.cpp
